objects/Itinerary__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDescription__c</fullName>
        <label>ActivityDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TravelPackage__c</fullName>
        <label>TravelPackage</label>
        <referenceTo>TravelPackage__c</referenceTo>
        <relationshipLabel>Itineraries</relationshipLabel>
        <relationshipName>Itineraries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Itinerary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Itinerary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itineraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>